# fabrix

./: .gitignore  LICENSE  README.md  pyproject.toml
bench/: profile_fabrix.py
demos/: attractor_reach.py  interactive_track.py  obstacle_reach.py  spheres_tuned.py  tune_spheres.py
docs/: ROADMAP.md  pose_points_attractor.md
experiments/: bench_single.py  fk_autodiff_check.py  fk_latency_clean.py  fk_provider_bench.py  gen3_fk.py  probe.py  probe2.py
fabrix/: __init__.py  collision.py  diff.py  energy.py  fabric.py  geometry.py  integrate.py  kinematics.py  leaves.py  maps.py  spec.py
tests/: test_collision.py  test_fabrix.py  test_m2.py  test_m3.py
