[project]
name = "kinova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.1",
    "jax-dataclasses>=1.6.3",
    "jaxlie>=1.5.0",
    "loop-rate-limiters>=1.2.0",
    "matplotlib>=3.10.9",
    "mujoco>=3.9.0",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
viz = [
    "viser>=1.0.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
